--- a/main.css
+++ b/main.css
@@ -12,6 +12,7 @@
 
 .users{
     display: flex;
+    flex-wrap: wrap;
 }
 
 .users div{
@@ -21,4 +22,15 @@
 .users h2, .users h4{
     text-align: center;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+.ui{
+    margin-top: 100px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.hide{
+    display: none;
 }
